Update Code of user
